hard-gists/3287286/run.log
=== Docker Run Log for 3287286 ===
Started at: Mi 29. Okt 13:47:59 CET 2025

[2025-10-29 13:48:00] START: Running container for 3287286
[2025-10-29 13:48:00] SUCCESS: Container dd9fe6ff38ff2f812b4f6d1457393a668f5fa6f1570756982b703bc0a92de41b started for 3287286
=== Container logs for 3287286 ===
  File "/snippet.py", line 23
    except LookupError, le:
           ^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3287286 ===
[2025-10-29 13:48:02] INFO: Container dd9fe6ff38ff2f812b4f6d1457393a668f5fa6f1570756982b703bc0a92de41b has stopped
